//指定proto3格式
syntax = "proto3";
//一些生成代码的设置
option java_multiple_files = true;//以外部类模式生成
option java_package = "org.coolbeevip.grpc.labs.demo.grpc";//所在包名
option java_outer_classname = "ExchangeProto";//最外层类名称

// 定义一个交换服务
service ExchangeService {
  //简单RPC
  rpc SendMessage(RequestMessage) returns (ResponseMessage) {}
  //服务端流式RPC
  rpc SendServerStream(RequestMessage) returns (stream ResponseMessage) {}
  //客户端流式RPC
  rpc SendClientStream(stream RequestMessage) returns (ResponseMessage) {}
  //双向流式RPC
  rpc SendBidirectionStream(stream RequestMessage) returns (stream ResponseMessage) {}
}

message RequestMessage {
    int32 id = 1;
    string text = 2;
}

message ResponseMessage {
    int32 id = 1;
    int32 from_id = 2;
    string text = 3;
}